<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

//Generated By PlantUML Command
class cuidador extends Model
{
    protected $fillable = [
        'nombre',
        'especialidad',
    ];

    public function animals()
    {
        return $this->hasMany('App\Models\animal');
    }

    public function animal()
    {
        return $this->hasOne(\App\Models\animal);
    }

    public function especiess()
    {
        return $this->hasMany('App\Models\especies');
    }
}
