<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

//Generated By PlantUML Command
class especies extends Model
{
    protected $fillable = [
        'nombre',
        'associatedRecinto',
    ];

    public function animal()
    {
        return $this->belongsTo('App\Models\animal');
    }

    public function animals()
    {
        return $this->hasMany('App\Models\animal');
    }

    public function cuidador()
    {
        return $this->belongsTo('App\Models\cuidador');
    }
}
