<?php 
use Illuminate\Support\Facades\Schema;

use Illuminate\Database\Schema\Blueprint;
use Illuminate\Database\Migrations\Migration;
//Generated By PlantUML Command
class CreateEspeciesrecintos extends Migration{
	public function up(){ 
 		Schema::create('especiesrecintos', function (Blueprint $table) { 
			$table->bigIncrements('id');
			$table->int('id');
			$table->timestamps();
		});
 	} 
	public function down(){
 
	} 
}